# sio

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  LICENSE  README.md
examples/01_sio_include/: CMakeLists.txt  input.txt  main.c
include/sio/: sio.h
src/: sio_linux.c
test/: CMakeLists.txt  test_sio_linux.c
